--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
     "lucide-react": "^0.483.0",
     "moment": "2.29.4",
     "next": "^15.2.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "1.4.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "1.13.0",
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^15.0.0",
-    "react-quill": "^2.0.0",
+    "react-quill": "^0.0.2",
     "react-slick": "^0.29.0",
-    "react-syntax-highlighter": "^5.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
     "redux-persist": "6.0.0",
     "sharp": "0.32.6",
@@ -64,9 +64,7 @@
     "@types/react-is": "18.3.0",
     "@types/react-slick": "^0.23.10",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "autoprefixer": "^10.4.21",
     "postcss": "8",
-    "postcss-import": "^16.1.0",
     "tailwindcss": "3.4.4",
     "typescript": "5"
   }
